Fixed text not centered

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -14,7 +14,7 @@ body {
 
 #container {
     height: calc(100vh - 40px);
-    width: min(calc(100vw - 40px), var(--editor-width));
+    width: min(calc(100vw - 120px), var(--editor-width));
 }
 
 /* A trick to display the scrollbar to the right instead of next to the text */
